# compression-multichannel-signals

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: main_helper.h
include/coders/: constants.h
include/coders/base/: coder_base.h  decoder_base.h
include/coders/cols/: coder_cols.h  decoder_cols.h
include/coders/common/: coder_common.h  decoder_common.h
include/coders/constant/apca/: coder_apca.h  decoder_apca.h
include/coders/constant/pca/: coder_pca.h  decoder_pca.h  pca_window.h
include/coders/correlation/gamps/: coder_gamps.h  decoder_gamps.h  group_gamps.h
include/coders/linear/: linear_coder_utils.h
include/coders/linear/ca/: coder_ca.h  decoder_ca.h
include/coders/linear/pwlh/: decoder_pwlh.h
include/coders/linear/slide_filter/: coder_slide_filter.h  decoder_slide_filter.h
include/coders/lossless/base/: coder_base.h  decoder_base.h
include/coders/lossless/gorilla/: coder_gorilla.h  decoder_gorilla.h  gorilla_constants.h
include/coders/lossless/ts2diff/: coder_ts2diff.h  decoder_ts2diff.h  ts2diff_window.h
include/coders/lossy/constant/: constant_coder_utils.h
include/coders/lossy/constant/apca/: apca_window.h  coder_apca.h  decoder_apca.h
include/coders/lossy/constant/pca/: coder_pca.h  decoder_pca.h
include/coders/lossy/correlation/gamps/: coder_gamps.h  decoder_gamps.h  map_entry.h  mapping_table.h
include/coders/lossy/linear/ca/: ca_window.h  decoder_ca.h
include/coders/lossy/linear/fr/: coder_fr.h  decoder_fr.h  fr_window.h
include/coders/lossy/linear/pwlh/: coder_pwlh.h  decoder_pwlh.h  pwlh_window.h
include/coders/lossy/linear/slide_filter/: decoder_slide_filter.h  slide_filter_window.h
include/coders/utils/: coder_utils.h  column.h  window.h
include/coders/utils/header/: header_coder.h  header_decoder.h  header_ts_utils.h
include/coders/utils/mask/: burst.h  mask.h
include/coders/utils/mask/arithmetic/: arithmetic_mask_coder.h  arithmetic_mask_decoder.h  coder_input.h  coder_output.h  decoder_input.h  decoder_output.h  modelKT.h
include/coders/utils/time_delta/: time_delta_coder.h  time_delta_decoder.h
include/dataset/: column_code.h  dataset.h  dataset_utils.h  epsilon_mapper.h  range.h
include/file_utils/: path.h
include/file_utils/bit_stream/: bit_stream_reader.h  bit_stream_utils.h  bit_stream_writer.h
include/file_utils/csv/: csv_reader.h  csv_utils.h  csv_writer.h
include/file_utils/text/: text_reader.h  text_utils.h
include/tests/: tests.h  tests_bit_stream.h  tests_coders_utils.h  tests_examples.h  tests_line.h  tests_modelKT.h  tests_utils.h
include/tests/utils/: tests_datetime_utils.h  tests_math_utils.h  tests_string_utils.h  tests_vector_utils.h
include/utils/: conversor.h  datetime_utils.h  line_utils.h  math_utils.h  os_utils.h  string_utils.h  vector_utils.h
src/: main_helper.cpp
src/coders/: constants.cpp
src/coders/base/: coder_base.cpp  decoder_base.cpp
src/coders/cols/: coder_cols.cpp  decoder_cols.cpp
src/coders/common/: coder_common.cpp  decoder_common.cpp
src/coders/constant/apca/: apca_window.cpp  coder_apca.cpp  decoder_apca.cpp
src/coders/constant/pca/: coder_pca.cpp  decoder_pca.cpp
src/coders/correlation/gamps/: coder_gamps.cpp  decoder_gamps.cpp  map_entry.cpp  mapping_table.cpp
src/coders/linear/ca/: coder_ca.cpp  decoder_ca.cpp
src/coders/linear/fr/: coder_fr.cpp  decoder_fr.cpp
src/coders/linear/slide_filter/: decoder_slide_filter.cpp  slide_filter_window.cpp
src/coders/lossless/base/: coder_base.cpp  decoder_base.cpp
src/coders/lossless/gorilla/: coder_gorilla.cpp  decoder_gorilla.cpp
src/coders/lossless/ts2diff/: coder_ts2diff.cpp  decoder_ts2diff.cpp  ts2diff_window.cpp
src/coders/lossy/constant/apca/: coder_apca.cpp  decoder_apca.cpp
src/coders/lossy/constant/pca/: coder_pca.cpp  decoder_pca.cpp  pca_window.cpp
src/coders/lossy/correlation/gamps/: coder_gamps.cpp  decoder_gamps.cpp  group_gamps.cpp  map_entry.cpp
src/coders/lossy/linear/: linear_coder_utils.cpp
src/coders/lossy/linear/ca/: ca_window.cpp  coder_ca.cpp  decoder_ca.cpp
src/coders/lossy/linear/fr/: decoder_fr.cpp  fr_window.cpp
src/coders/lossy/linear/pwlh/: coder_pwlh.cpp  decoder_pwlh.cpp  pwlh_window.cpp
src/coders/lossy/linear/slide_filter/: coder_slide_filter.cpp  decoder_slide_filter.cpp  slide_filter_window.cpp
src/coders/utils/: coder_utils.cpp
src/coders/utils/header/: header_coder.cpp  header_decoder.cpp
src/coders/utils/mask/: mask.cpp
src/coders/utils/mask/arithmetic/: arithmetic_mask_coder.cpp  arithmetic_mask_decoder.cpp  coder_input.cpp  coder_output.cpp  decoder_input.cpp  decoder_output.cpp
src/coders/utils/time_delta/: time_delta_coder.cpp  time_delta_decoder.cpp
src/dataset/: column_code.cpp  dataset.cpp  dataset_utils.cpp  epsilon_mapper.cpp
src/file_utils/bit_stream/: bit_stream_reader.cpp  bit_stream_utils.cpp  bit_stream_writer.cpp
src/file_utils/csv/: csv_reader.cpp  csv_utils.cpp  csv_writer.cpp
src/file_utils/text/: text_reader.cpp  text_utils.cpp
src/tests/: tests.cpp  tests_bit_stream.cpp  tests_coders_utils.cpp  tests_examples.cpp  tests_line.cpp  tests_modelKT.cpp  tests_utils.cpp
src/tests/utils/: tests_datetime_utils.cpp  tests_math_utils.cpp  tests_string_utils.cpp  tests_vector_utils.cpp
src/utils/: conversor.cpp  datetime_utils.cpp  line_utils.cpp  math_utils.cpp  os_utils.cpp  string_utils.cpp
test_files/examples/expected/: example.csv-APCA*-C.bin-D.csv  example.csv-CA*-C.bin-D.csv  example.csv-FR*-C.bin-D.csv  example.csv-GAMPS*-C.bin-D.csv  example.csv-PCA*-C.bin-D.csv  example.csv-PWLH*-C.bin-D.csv  example.csv-SF*-C.bin-D.csv
